# solassitude

./: CMakeLists.txt  LICENSE.txt  README.md  TRIVIA.md
include/solassitude/: gl_abstract.h  gl_buffer.h  gl_reference.h  gl_vertex_array.h  gl_vertex_attributes.h  glew_abstract.h  glfw_abstract.h  glfw_window.h  library_error.h  library_scope_guard.h  solassitude.h
src/: gl_abstract.cpp  gl_buffer.cpp  gl_reference.cpp  gl_vertex_array.cpp  glabstract.cpp  glew_abstract.cpp  glfw_abstract.cpp  glfw_window.cpp  solassitude.cpp
